:lipstick: Fix disappearing scrollbar outside of blocks

--- a/src/components/blocks/blocks.css
+++ b/src/components/blocks/blocks.css
@@ -32,7 +32,7 @@
     font-family: 'Titillium Web';
 }
 
-::-webkit-scrollbar {
+.blocks ::-webkit-scrollbar {
     width: 0px;  /* remove scrollbar space */
     background: transparent;  /* optional: just make scrollbar invisible */
 }
